==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/targets/TARGET_Analog_Devices/TARGET_ADUCM4X50/TARGET_ADUCM4050/api/serial_api.c <==
#include "serial_api.h"
#include <math.h>
#include "mbed_assert.h"
#include <string.h>
#include "cmsis.h"
#include "pinmap.h"
#include "PeripheralPins.h"
#include "drivers/uart/adi_uart.h"
#define ADI_UART_MEMORY_SIZE   (ADI_UART_BIDIR_MEMORY_SIZE)
#define ADI_UART_NUM_DEVICES   2

void serial_free(serial_t *obj)
{
    adi_uart_Close(hDevice[obj->index]);
}

void serial_baud(serial_t *obj, int baudrate)
{
    uint32_t uartdivc,uartdivm,uartdivn,uartosr;

    // figures based on PCLK of 26MHz
    switch (baudrate) {
        case    9600:
            uartdivc= 28;
            uartdivm= 3;
            uartdivn= 46;
            uartosr= 3;
            break;
        case   19200:
            uartdivc= 14;
            uartdivm= 3;
            uartdivn= 46;
            uartosr= 3;
            break;
        case   38400:
            uartdivc= 07;
            uartdivm= 3;
            uartdivn= 46;
            uartosr= 3;
            break;
        case   57600:
            uartdivc= 14;
            uartdivm= 1;
            uartdivn= 15;
            uartosr= 3;
            break;
        case  115200:
            uartdivc= 03;
            uartdivm= 2;
            uartdivn= 719;
            uartosr= 3;
            break;
        case  230400:
            uartdivc= 03;
            uartdivm= 1;
            uartdivn= 359;
            uartosr= 3;
            break;
        default:    // default of 9600kbps
            uartdivc= 28;
            uartdivm= 3;
            uartdivn= 46;
            uartosr= 3;
            break;
    }

    adi_uart_ConfigBaudRate(hDevice[obj->index],uartdivc,uartdivm,uartdivn,uartosr);
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
    ADI_UART_PARITY convertedparity   = ADI_UART_NO_PARITY;
    ADI_UART_STOPBITS convertedstopbits = ADI_UART_ONE_STOPBIT;

    if (stop_bits) {
        convertedstopbits = ADI_UART_ONE_AND_HALF_TWO_STOPBITS;
    }

    if (parity == ParityOdd) {
        convertedparity = ADI_UART_ODD_PARITY;
    } else if (parity == ParityEven) {
        convertedparity = ADI_UART_EVEN_PARITY;
    } else if (parity == ParityForced1) {
        convertedparity = ADI_UART_ODD_PARITY_STICKY;
    } else if (parity == ParityForced0) {
        convertedparity = ADI_UART_EVEN_PARITY_STICKY;
    }

    adi_uart_SetConfiguration(hDevice[obj->index], convertedparity, convertedstopbits,
                              (ADI_UART_WORDLEN)(data_bits - 5));
}

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    uint32_t uart_tx = pinmap_peripheral(tx, PinMap_UART_TX);
    uint32_t uart_rx = pinmap_peripheral(rx, PinMap_UART_RX);
    obj->index = pinmap_merge(uart_tx, uart_rx);
    MBED_ASSERT((int)obj->index != NC);
    adi_uart_Open(obj->index,ADI_UART_DIR_BIDIRECTION,UartDeviceMem[obj->index],ADI_UART_MEMORY_SIZE,&hDevice[obj->index]);
    serial_baud(obj, 9600);
    serial_format(obj, 8, ParityNone, 1);
    pinmap_pinout(tx, PinMap_UART_TX);
    pinmap_pinout(rx, PinMap_UART_RX);
    if (tx != NC) {
        pin_mode(tx, PullUp);
    }
    if (rx != NC) {
        pin_mode(rx, PullUp);
    }
    if (obj->index == STDIO_UART) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
}

int serial_getc(serial_t *obj)
{
    int c;
    void *pBuff;
    uint32_t pHwError;
    adi_uart_SubmitRxBuffer(hDevice[obj->index], &rxbuffer[obj->index], 1, 1);
    adi_uart_GetRxBuffer(hDevice[obj->index], &pBuff, &pHwError);
    c = (unsigned) rxbuffer[obj->index];
    return (c);
}

void serial_putc(serial_t *obj, int c)
{
    void *pBuff;
    uint32_t pHwError;
    txbuffer[obj->index]= (char) c;
    adi_uart_SubmitTxBuffer(hDevice[obj->index],&txbuffer[obj->index], 1, 1);
    adi_uart_GetTxBuffer(hDevice[obj->index], &pBuff, &pHwError);
    return;
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    MBED_ASSERT(obj);

    adi_uart_RegisterCallback(hDevice[obj->index], &uart_callback, obj);
    if (enable) {
    } else {
    }
}

void serial_break_set(serial_t *obj)
{
    adi_uart_ForceTxBreak(hDevice[obj->index], true);
}

void serial_break_clear(serial_t *obj)
{
    adi_uart_ForceTxBreak(hDevice[obj->index], false);
}
